manifests/ovms/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ovms
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
